Manage database + specific game achievement data